# Compiler

./: .gitignore  CMakeLists.txt  README.MD  TODO.txt  disable_other_tables.sql  main  test_postgres_mariadb
.cursor/rules/: dataengineering.mdc
Compiler-safe-recovery-f6b3f0c/: CMakeLists.txt  TODO.txt
Compiler-safe-recovery-f6b3f0c/DDL/: TransferMetrics.sql
Compiler-safe-recovery-f6b3f0c/DDL_EXPORT/MariaDB/SportBook/SportBook/constraints/: productos_constraints.sql
Compiler-safe-recovery-f6b3f0c/DDL_EXPORT/MariaDB/SportBook/SportBook/indexes/: eventos_indexes.sql  test_sync_indexes.sql
Compiler-safe-recovery-f6b3f0c/DDL_EXPORT/MongoDB/testdb;/testdb;/tables/: usuarios_demo.sql
Compiler-safe-recovery-f6b3f0c/DDL_EXPORT/PostgreSQL/dbo/dbo/indexes/: basic_types_indexes.sql  test_indexes_indexes.sql  test_performance_indexes.sql
Compiler-safe-recovery-f6b3f0c/DDL_EXPORT/PostgreSQL/source_data/source_data/tables/: test_table.sql
Compiler-safe-recovery-f6b3f0c/include/: ConnectionPool.h  MSSQLToPostgres.h  MariaDBToPostgres.h  MongoToPostgres.h  PostgresToPostgres.h  SyncReporter.h
Compiler-safe-recovery-f6b3f0c/src/: ConnectionGuard.cpp  ConnectionPool.cpp  DDLExporter.cpp  DataGovernance.cpp  MetricsCollector.cpp  SyncReporter.cpp
DDL/: Catalog.sql  Config Table.sql  TransferMetrics.sql
DDL_EXPORT/MariaDB/SportBook/SportBook/constraints/: productos_constraints.sql
DDL_EXPORT/MariaDB/SportBook/SportBook/indexes/: eventos_indexes.sql  productos_indexes.sql  test_sync_indexes.sql
DDL_EXPORT/MariaDB/SportBook/SportBook/tables/: eventos.sql  numeros.sql  productos.sql  test_sync.sql  usuarios.sql
DDL_EXPORT/MongoDB/mydatabase/mydatabase/tables/: info.sql  usuarios.sql
DDL_EXPORT/MongoDB/testdb;/testdb;/tables/: usuarios_demo.sql  ventas.sql
DDL_EXPORT/PostgreSQL/dbo/dbo/indexes/: basic_types_indexes.sql  customers_indexes.sql  test_indexes_indexes.sql  (+2 more)
frontend/: package-lock.json  package.json  server.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Catalog.tsx  Dashboard.tsx  Governance.tsx  Layout.tsx  Monitor.tsx
frontend/src/services/: api.ts
include/: Config.h  ConnectionManager.h  ConnectionPool.h  DDLExporter.h  MSSQLToPostgres.h  MariaDBToPostgres.h  MetricsCollector.h  MongoToPostgres.h  PostgresToMariaDB.h  PostgresToPostgres.h  StreamingData.h  SyncReporter.h  catalog_clean.h  catalog_manager.h  logger.h
src/: ConnectionPool.cpp  DDLExporter.cpp  DataGovernance.cpp  MetricsCollector.cpp  SyncReporter.cpp  logger.cpp  main.cpp
(+7 files in other folders)
